--- a/config
+++ b/config
@@ -342,5 +342,5 @@
 [reporting]
 
 # When returning a free-busy report, limit the number of returned
-# occurences per event to prevent DOS attacks.
+# occurences per event to prevent DoS attacks.
 #max_freebusy_occurrence = 10000
