--- a/contrib/nginx/radicale.conf
+++ b/contrib/nginx/radicale.conf
@@ -8,7 +8,7 @@ rewrite ^/.well-known/caldav /radicale/ redirect;
 
 ## Base URI: /radicale/
 location /radicale/ {
-    proxy_pass        http://localhost:5232/;
+    proxy_pass        http://localhost:5232;
     proxy_set_header  X-Script-Name /radicale;
     proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header  X-Forwarded-Host $host;
@@ -20,7 +20,7 @@ location /radicale/ {
 
 ## Base URI: /
 #location / {
-#    proxy_pass        http://localhost:5232/;
+#    proxy_pass        http://localhost:5232;
 #    proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
 #    proxy_set_header  X-Forwarded-Host $host;
 #    proxy_set_header  X-Forwarded-Port $server_port;
