refactor(web): integrate radicale to web application

--- a/web/.env.example
+++ b/web/.env.example
@@ -9,5 +9,12 @@ AWS_REGION=your-aws-region
 EMAIL_FROM=your-email-from
 EMAIL_FROM_NAME=your-email-from-name
 
+RADICALE_URL=http://localhost:5232
+RADICALE_TOKEN=secret-token
+
 # Database
 DB_FILE_NAME=local.db
+
+# Mock Configuration (for development/testing)
+MOCK_SMS=true
+MOCK_EMAIL=true
