--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: ['3.9', '3.10', '3.11', '3.12.3', '3.13.0', pypy-3.9]
+        python-version: ["3.9", "3.10", "3.11", "3.12.3", "3.13.0", pypy-3.9]
         exclude:
           - os: windows-latest
             python-version: pypy-3.9
@@ -19,7 +19,7 @@ jobs:
       - name: Install Test dependencies
         run: pip install tox
       - name: Test
-        run: tox -e py
+        run: tox -c pyproject.toml -e py
       - name: Install Coveralls
         if: github.event_name == 'push'
         run: pip install coveralls
@@ -51,8 +51,8 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: '3.12'
+          python-version: "3.12"
       - name: Install tox
         run: pip install tox
       - name: Lint
-        run: tox -e flake8,mypy,isort
+        run: tox -c pyproject.toml -e flake8,mypy,isort
