extend config sniplet triggered by https://github.com/Kozea/Radicale/issues/1869

--- a/contrib/apache/radicale.conf
+++ b/contrib/apache/radicale.conf
@@ -59,6 +59,9 @@
 
 		ProxyPass        http://localhost:5232/ retry=0
 		ProxyPassReverse http://localhost:5232/
+		<IfVersion >= 2.4.40>
+		Proxy100Continue Off
+		</IfVersion>
 
 		Require local
 		<IfDefine RADICALE_PERMIT_PUBLIC_ACCESS>
@@ -74,6 +77,9 @@
 
 		ProxyPass        http://localhost:5232/ retry=0
 		ProxyPassReverse http://localhost:5232/
+		<IfVersion >= 2.4.40>
+		Proxy100Continue Off
+		</IfVersion>
 
 		<IfDefine !RADICALE_SERVER_USER_AUTHENTICATION>
 			## User authentication handled by "radicale"
@@ -221,6 +227,9 @@ CustomLog logs/ssl_request_log "%t %h %{SSL_PROTOCOL}x %{SSL_CIPHER}x \"%r\" %b"
 
 		ProxyPass        http://localhost:5232/ retry=0
 		ProxyPassReverse http://localhost:5232/
+		<IfVersion >= 2.4.40>
+		Proxy100Continue Off
+		</IfVersion>
 
 		Require local
 		<IfDefine RADICALE_PERMIT_PUBLIC_ACCESS>
@@ -234,6 +243,9 @@ CustomLog logs/ssl_request_log "%t %h %{SSL_PROTOCOL}x %{SSL_CIPHER}x \"%r\" %b"
 
 		ProxyPass        http://localhost:5232/ retry=0
 		ProxyPassReverse http://localhost:5232/
+		<IfVersion >= 2.4.40>
+		Proxy100Continue Off
+		</IfVersion>
 
 		<IfDefine !RADICALE_SERVER_USER_AUTHENTICATION>
 			## User authentication handled by "radicale"
