fix exclude for windows-latest

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,11 @@ jobs:
         python-version: ['3.9', '3.10', '3.11', '3.12', '3.13', 'pypy-3.9', 'pypy-3.10', 'pypy-3.11']
         exclude:
           - os: windows-latest
-            python-version: [ 'pypy-3.9', 'pypy-3.10', 'pypy-3.11' ]
+            python-version: 'pypy-3.9'
+          - os: windows-latest
+            python-version: 'pypy-3.10'
+          - os: windows-latest
+            python-version: 'pypy-3.11'
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
