--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -2,7 +2,7 @@ name: Build and publish Docker image
 
 on:
   release:
-    types: [published]
+    types: [released]
   schedule:
     - cron: '0 0 * * *'
   workflow_dispatch:
