coveralls-test: do not run on PR, related to https://github.com/Kozea/Radicale/issues/1881

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,6 +26,7 @@ jobs:
         run: tox -c pyproject.toml -e py
 
   coveralls-test:
+    if: github.event_name == 'push'
     strategy:
       matrix:
         os: [ubuntu-latest]
