profiling: add config hint

--- a/config
+++ b/config
@@ -328,7 +328,7 @@
 # Log profiling data per request minium duration (seconds)
 #profiling_per_request_min_duration = 3
 
-# Log profiling data per request method interval
+# Log profiling data per request method interval (seconds)
 #profiling_per_request_method_interval = 600
 
 # Log profiling top X functions (limit)
