--- a/config
+++ b/config
@@ -325,7 +325,7 @@
 # Value: per_request | per_request_method | none
 #profiling = none
 
-# Log profiling data per request minium duration (seconds)
+# Log profiling data per request minimum duration (seconds)
 #profiling_per_request_min_duration = 3
 
 # Log profiling data per request method interval (seconds)
