--- a/config
+++ b/config
@@ -331,6 +331,12 @@
 # Log profiling data per request minimum duration (seconds)
 #profiling_per_request_min_duration = 3
 
+# Log profiling request header (if passing minimum duration)
+#profiling_per_request_header = False
+
+# Log profiling request XML (if passing minimum duration)
+#profiling_per_request_xml = False
+
 # Log profiling data per request method interval (seconds)
 #profiling_per_request_method_interval = 600
 
