Docker publish workflow: Add stable, major, and minor tags
  For every release, add the following tags:
    1. "stable" - The latest stable release can be obtained using this tag
    2. major and minor

  The "latest" tag remains as-is. It will always point to the latest image (stable or otherwise)

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -37,8 +37,11 @@ jobs:
           flavor: latest=true
           tags: |
             type=semver,pattern={{version}}
+            type=semver,pattern={{major}}
+            type=semver,pattern={{major}}.{{minor}}
             type=schedule,prefix=nightly-,pattern={{date 'YYYYMMDD'}}
             type=raw,enable=${{ github.event_name == 'workflow_dispatch' }},value=workflow_dispatch-{{branch}}-{{sha}}
+            type=raw,enable=${{ github.event_name == 'release' }},value=stable
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
