--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -29,11 +29,17 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      # - name: Log in to the dockerhub container registry
-      #   uses: docker/login-action@v3
-      #   with:
-      #     username: ${{ vars.DOCKERHUB_ORGNAME }}
-      #     password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Log in to the dockerhub container registry
+        uses: docker/login-action@v3
+        with:
+          username: ${{ vars.DOCKERHUB_ORGNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Try pulling some docker images manually
+        run: |
+          echo "Pulling some images"
+          docker pull alpine
+          docker pull moby/buildkit:master
 
       - name: Extract metadata for Docker build
         id: meta
