--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -7,9 +7,9 @@ on:
     - cron: '0 0 * * *'
   workflow_dispatch:
 
-env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
+# env:
+#   REGISTRY: ghcr.io
+#   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
   build-and-push-image:
@@ -22,12 +22,17 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Log in to the ghcr Container registry
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+      # - name: Log in to the ghcr Container registry
+      #   uses: docker/login-action@v3
+      #   with:
+      #     registry: ${{ env.REGISTRY }}
+      #     username: ${{ github.actor }}
+      #     password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Try pulling some docker images manually (Before login)
+        run: |
+          echo "Pulling some images before login"
+          docker pull alpine
+          docker pull moby/buildkit:master
 
       - name: Log in to the dockerhub container registry
         uses: docker/login-action@v3
@@ -35,42 +40,42 @@ jobs:
           username: ${{ vars.DOCKERHUB_ORGNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Try pulling some docker images manually
+      - name: Try pulling some docker images manually (after login)
         run: |
-          echo "Pulling some images"
+          echo "Pulling some images after login"
           docker pull alpine
           docker pull moby/buildkit:master
 
-      - name: Extract metadata for Docker build
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: |
-            name=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-            # name=${{ env.IMAGE_NAME }}
-          flavor: latest=true
-          tags: |
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=schedule,prefix=nightly-,pattern={{date 'YYYYMMDD'}}
-            type=raw,enable=${{ github.event_name == 'workflow_dispatch' }},value=workflow_dispatch-{{branch}}-{{sha}}
-            type=raw,enable=${{ github.event_name == 'release' }},value=stable
+      # - name: Extract metadata for Docker build
+      #   id: meta
+      #   uses: docker/metadata-action@v5
+      #   with:
+      #     images: |
+      #       name=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+      #       # name=${{ env.IMAGE_NAME }}
+      #     flavor: latest=true
+      #     tags: |
+      #       type=semver,pattern={{version}}
+      #       type=semver,pattern={{major}}
+      #       type=semver,pattern={{major}}.{{minor}}
+      #       type=schedule,prefix=nightly-,pattern={{date 'YYYYMMDD'}}
+      #       type=raw,enable=${{ github.event_name == 'workflow_dispatch' }},value=workflow_dispatch-{{branch}}-{{sha}}
+      #       type=raw,enable=${{ github.event_name == 'release' }},value=stable
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-        with:
-          platforms: arm64
+      # - name: Set up QEMU
+      #   uses: docker/setup-qemu-action@v3
+      #   with:
+      #     platforms: arm64
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      # - name: Set up Docker Buildx
+      #   uses: docker/setup-buildx-action@v3
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          build-args: DEPENDENCIES=bcrypt,argon2,ldap
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          platforms: linux/amd64,linux/arm64
+      # - name: Build and push Docker image
+      #   uses: docker/build-push-action@v6
+      #   with:
+      #     context: .
+      #     build-args: DEPENDENCIES=bcrypt,argon2,ldap
+      #     push: true
+      #     tags: ${{ steps.meta.outputs.tags }}
+      #     labels: ${{ steps.meta.outputs.labels }}
+      #     platforms: linux/amd64,linux/arm64
