--- a/compose.yaml
+++ b/compose.yaml
@@ -1,7 +1,7 @@
 name: Radicale
 services:
     radicale:
-        image: ghcr.io/kozea/radicale:3.5.10
+        image: ghcr.io/kozea/radicale:stable
         ports:
         - 5232:5232
         volumes:
