--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,11 +3,11 @@ on: [push, pull_request]
 
 jobs:
 
-  test-python-latest:
+  test-ubuntu-latest-python-latest:
     needs: lint
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest]
         python-version: ['3.14']
     runs-on: ${{ matrix.os }}
     steps:
@@ -17,7 +17,24 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install Test dependencies
         run: pip install tox
-      - name: Test with latest Python
+      - name: Test with latest Python on Ubuntu
+        run: tox -c pyproject.toml -e py
+
+  test-python-latest:
+    needs: test-ubuntu-latest-python-latest:
+    strategy:
+      matrix:
+        os: [macos-latest, windows-latest]
+        python-version: ['3.14']
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install Test dependencies
+        run: pip install tox
+      - name: Test with latest Python on other OS
         run: tox -c pyproject.toml -e py
 
   test:
