--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,7 @@ jobs:
     needs: [lint, test-ubuntu-python-newest]
     runs-on: ubuntu-latest
     container:
-      image: i386/ubuntu:22.04
+      image: archlinux:latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
@@ -33,7 +33,7 @@ jobs:
 
   test-ubuntu-python-oldest:
     name: Test Linux Ubuntu (latest Python:oldest)
-    needs: [lint, test-ubuntu-python-newest]
+    needs: [lint, test-ubuntu-python-newest, test-ubuntu-python-newest-32bit]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -47,7 +47,7 @@ jobs:
 
   test-otheros-python-newest:
     name: Test MacOS/Windows (latest Python:newest)
-    needs: [lint, test-ubuntu-python-newest]
+    needs: [lint, test-ubuntu-python-newest, test-ubuntu-python-newest-32bit]
     strategy:
       matrix:
         os: [macos-latest, windows-latest]
@@ -109,16 +109,12 @@ jobs:
   coveralls-test:
     name: Coveralls:Test
     if: github.event_name == 'push'
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
-        python-version: ['3.13']
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: '3.14'
       - name: Install Test dependencies
         run: pip install tox
       - name: Test
