--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,6 +26,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
+      - name: Install Python dependencies
+        run: |
+          curl https://bootstrap.pypa.io/get - pip.py - o get - pip.py
+          python get - pip.py
       - name: Install Test dependencies
         run: pip install tox
       - name: Test with newest Python on latest Ubuntu (32-bit)
