--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,7 +4,7 @@ on: [push, pull_request]
 jobs:
 
   test-ubuntu-python-newest:
-    name: Test Linux Ubuntu (latest Python:newest)
+    name: Test Ubuntu (latest Python:newest)
     needs: lint
     runs-on: ubuntu-latest
     steps:
@@ -17,13 +17,29 @@ jobs:
       - name: Test with newest Python on latest Ubuntu
         run: tox -c pyproject.toml -e py
 
-  test-ubuntu-python-newest-32bit:
-    name: Test Linux Ubuntu (32-bit)
+  test-ubuntu-python-32bit:
+    name: Test Ubuntu (Python 3.11 32-bit)
     needs: [lint, test-ubuntu-python-newest]
     runs-on: ubuntu-latest
     container:
-      image: i386/python:3.11
+      image: i386/alpine:3.19
+      volumes:
+        - /tmp:/__e/node24_alpine
+        - /tmp:/__e/node20_alpine
     steps:
+      - name: Fix checkout and upload-artifact
+        run: |
+          apk add nodejs npm
+
+          mkdir -p /__e/node24_alpine/bin
+          ln -sf $(which node) /__e/node24_alpine/bin/node
+          ln -sf $(which npm) /__e/node24_alpine/bin/npm
+          ln -sf $(which npx) /__e/node24_alpine/bin/npx
+
+          mkdir -p /__e/node20_alpine/bin
+          ln -sf $(which node) /__e/node20_alpine/bin/node
+          ln -sf $(which npm) /__e/node20_alpine/bin/npm
+          ln -sf $(which npx) /__e/node20_alpine/bin/npx
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
       - name: Install Test dependencies
@@ -32,8 +48,8 @@ jobs:
         run: tox -c pyproject.toml -e py
 
   test-ubuntu-python-oldest:
-    name: Test Linux Ubuntu (latest Python:oldest)
-    needs: [lint, test-ubuntu-python-newest, test-ubuntu-python-newest-32bit]
+    name: Test Ubuntu (latest Python:oldest)
+    needs: [lint, test-ubuntu-python-newest, test-ubuntu-python-32bit]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -47,7 +63,7 @@ jobs:
 
   test-otheros-python-newest:
     name: Test MacOS/Windows (latest Python:newest)
-    needs: [lint, test-ubuntu-python-newest, test-ubuntu-python-newest-32bit]
+    needs: [lint, test-ubuntu-python-newest, test-ubuntu-python-32bit]
     strategy:
       matrix:
         os: [macos-latest, windows-latest]
@@ -82,7 +98,7 @@ jobs:
         run: tox -c pyproject.toml -e py
 
   test-python-versions:
-    name: Test Linux/MacOS/Windows (latest Python:Matrix)
+    name: Test Ubuntu/MacOS/Windows (latest Python:Matrix)
     needs: [lint, test-otheros-python-oldest, test-otheros-python-newest, test-ubuntu-python-oldest, test-ubuntu-python-newest]
     strategy:
       matrix:
