--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,18 +30,19 @@ jobs:
       - name: Fix checkout and upload-artifact
         run: |
           apk add nodejs npm
-
           mkdir -p /__e/node24_alpine/bin
           ln -sf $(which node) /__e/node24_alpine/bin/node
           ln -sf $(which npm) /__e/node24_alpine/bin/npm
           ln -sf $(which npx) /__e/node24_alpine/bin/npx
-
           mkdir -p /__e/node20_alpine/bin
           ln -sf $(which node) /__e/node20_alpine/bin/node
           ln -sf $(which npm) /__e/node20_alpine/bin/npm
           ln -sf $(which npx) /__e/node20_alpine/bin/npx
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
+      - name: Install Python pip
+        run: |
+          apk add py3-pip
       - name: Install Test dependencies
         run: pip install tox
       - name: Test with newest Python on latest Ubuntu (32-bit)
