--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,7 +44,7 @@ jobs:
         run: |
           apk add py3-pip py3-tox
       - name: Test 32-bit
-        run: tox -c pyproject.toml -e py --workdir /__w/Radicale/Radicale
+        run: tox -c /__w/Radicale/Radicale/pyproject.toml -e py
 
   test-ubuntu-python-oldest:
     name: Test Ubuntu (latest Python:oldest)
