--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -49,7 +49,7 @@ jobs:
       - uses: actions/setup-python@v5
       - name: Install Python dependencies
         run: |
-          apk add py3-pip py3-tox
+          apk add py3-pip py3-tox gcc
       - name: Test 32-bit
         run: tox -c /__w/Radicale/Radicale/pyproject.toml -e py
 
