--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -49,7 +49,7 @@ jobs:
       - uses: actions/setup-python@v5
       - name: Install Python dependencies
         run: |
-          apk add py3-pip py3-tox gcc python3-dev libc-dev libffi-dev py3-bcrypt py3-cffi py3-argon2-cffi py3-requests py3-packaging py3-idna py3-urllib3 py3-waitress py3-certifi py3-argon2-cffi-bindings
+          apk add py3-pip py3-tox gcc python3-dev libc-dev libffi-dev py3-bcrypt py3-cffi py3-argon2-cffi py3-requests py3-packaging py3-idna py3-urllib3 py3-waitress py3-certifi py3-argon2-cffi-bindings rust
           python3 -m venv venv
           . venv/bin/activate
           pip install --upgrade pip
@@ -133,7 +133,7 @@ jobs:
 
   coveralls-test:
     name: Coveralls:Test
-    needs: [test-python-versions]
+    needs: [test-ubuntu-python-newest, test-python-32bit]
     if: github.event_name == 'push'
     runs-on: ubuntu-latest
     steps:
